--- a/src/Byndyusoft.Data.Relational.Diagnostics.csproj
+++ b/src/Byndyusoft.Data.Relational.Diagnostics.csproj
@@ -22,5 +22,9 @@
     <None Include="..\icon.png" Pack="true" PackagePath="icon.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite" Version="1.0.113.6" />
+  </ItemGroup>
+
 
 </Project>
