--- a/src/Byndyusoft.Data.Relational.Diagnostics.csproj
+++ b/src/Byndyusoft.Data.Relational.Diagnostics.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Data.SQLite" Version="1.0.113.6" />
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="5.0.0" />
   </ItemGroup>
 
 
