--- a/tests/Byndyusoft.Data.Relational.Diagnostics.Tests.csproj
+++ b/tests/Byndyusoft.Data.Relational.Diagnostics.Tests.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Moq" Version="4.15.2" />
     <PackageReference Include="MySql.Data" Version="8.0.22" />
     <PackageReference Include="Npgsql" Version="5.0.1.1" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.113.6" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
