--- a/tests/Byndyusoft.Data.Relational.Diagnostics.Tests.csproj
+++ b/tests/Byndyusoft.Data.Relational.Diagnostics.Tests.csproj
@@ -1,11 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
-
     <RootNamespace>Byndyusoft.Data.Relational.Diagnostics.Tests</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
